# OA_calc

./: pyproject.toml
oac/: .env  bot.py  bot_main.py  config_reader.py  kes_train.py  scale_counter_test.py  train.py
oac/dialog/: ask_window.py  function.py  getters.py  kbs.py  parameters.xlsx  patientparameter.py  selected.py  start_handler.py  states.py  variants_with_id.py  windows.py
oac/dialogs/: commands.py  getters.py  kbs.py  selected.py  start_commands.py  states.py  variants_with_id.py  windows.py
oac/dialogs/KES_dialog/: KES_calculator.py  KES_getters.py  KES_selected.py  KES_utils.py  KES_windows.py
oac/dialogs/misc_dialogs/: ask_selected.py  ask_window.py  misc_getters.py  misc_selected.py  misc_windows.py  report_message.py
oac/dialogs/patient_dialog/: getters.py  kbs.py  my_windows.py  my_wins_kbs_btns.py  selected.py  windows.py
oac/dialogs/start_dialog/: start_window.py
oac/patients/: questions.py  spinal_dosage.py
oac/program_logic/: AaDO2_counter.py  apacheII_counter.py  blood_counter.py  data.py  drag.py  function.py  my_table.py  parameters.py  patient.py  patientparameter.py  scale_counter.py  sma.py  sofa_counter.py  spinal_dosage.py
oac/program_logic/data/: drag_dosage.xlsx  parameters.xlsx  scales.xlsx
