[tool.poetry]
name = "oac"
version = "0.1.0"
description = ""
authors = ["EgorVjalkov <e.vjalkov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
aiogram-dialog = "^2.1.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
prettytable = "^3.10.0"
fastnumbers = "^5.1.0"
pydantic-settings = "^2.5.2"

[tool.poetry.scripts]
oac_bot = "oac.bot_main:bot_run"
test_bot = "oac.bot_main:test_run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
